pkgs/artifacts/tests/e2e/snapshots/tests__e2e__config_env_tests__e2e_config_nixos_check_sets_config.snap
---
source: tests/e2e/config_env_tests.rs
expression: redacted
---
# BEGIN CONFIG SNAPSHOT
# config=/tmp/REDACTED/config.json
# target_type=nixos_or_home
# machine=test-machine
# username=
# artifact=nixos-secret
# artifact_context=nixos
# FILE CONTENT:
{}# END CONFIG SNAPSHOT
