pkgs/artifacts/tests/e2e/snapshots/tests__e2e__config_env_tests__e2e_config_shared_check_sets_machines_users.snap
---
source: tests/e2e/config_env_tests.rs
expression: output_text
---
# BEGIN SHARED CHECK SNAPSHOT
# artifact=shared-config-secret
# MACHINES FILE:
{
  "test-machine": {}
}# USERS FILE:
{}# END SHARED CHECK SNAPSHOT
