pkgs/artifacts/tests/e2e/snapshots/tests__e2e__config_env_tests__e2e_config_shared_serialize_sets_machines_users.snap
---
source: tests/e2e/config_env_tests.rs
expression: redacted
---
# BEGIN SHARED SERIALIZE SNAPSHOT
# artifact=shared-config-secret
# out=/tmp/REDACTED
# MACHINES FILE:
{
  "test-machine": {}
}# USERS FILE:
{}# END SHARED SERIALIZE SNAPSHOT
