pkgs/artifacts/tests/e2e/snapshots/tests__e2e__config_env_tests__e2e_unified_nixos_check_sets_targets.snap
---
source: tests/e2e/config_env_tests.rs
expression: result.output.to_string()
---
stdout: # BEGIN CHECK SNAPSHOT
# artifact=nixos-secret
# artifact_context=nixos
# TARGETS FILE:
{
  "context": "nixos",
  "targets": [
    {
      "config": {},
      "name": "test-machine",
      "type": "nixos"
    }
  ]
}# INPUTS DIRECTORY:
secret-file
# END CHECK SNAPSHOT
stderr: (no output)
